fix styles -> list is no longer shifting left when scrollbar appears

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -97,6 +97,9 @@ input {
   -webkit-appearance: none;
   border-radius: 0; }
 
+body {
+  overflow-x: hidden; }
+
 @font-face {
   font-family: 'Star Jedi';
   src: url("../font/Starjedi.eot?") format("eot"), url("../font/Starjedi.woff") format("woff"), url("../font/Starjedi.ttf") format("truetype"), url("../font/Starjedi.svg#StarJedi") format("svg");
@@ -191,6 +194,11 @@ html {
       .header__heading--two {
         font-size: 1rem; } }
 
+.app {
+  width: 100vw;
+  height: 100%;
+  min-height: 100vh; }
+
 .container {
   width: 100%;
   min-height: 85vh;
@@ -198,13 +206,14 @@ html {
   background-size: 100% auto;
   background-position: center top 60px;
   display: flex;
-  flex-direction: column; }
+  flex-direction: column;
+  margin: auto; }
   @media screen and (min-width: 500px) {
     .container {
       min-height: 82vh; } }
   .container .character-list {
     margin: 1rem auto;
-    width: 90%;
+    width: 80%;
     display: flex;
     flex-direction: column;
     color: #ffe81f;
@@ -220,6 +229,7 @@ html {
       color: #000000; }
 
 .character {
+  font-size: 14px;
   background-color: #0a0b0b;
   height: 2rem;
   padding: 0 1rem;
@@ -228,3 +238,6 @@ html {
   align-items: center;
   cursor: pointer;
   box-shadow: 0 2px 4px 0 rgba(255, 232, 31, 0.2), 0 6px 20px 0 rgba(255, 232, 31, 0.19); }
+  @media screen and (min-width: 500px) {
+    .character {
+      font-size: 1rem; } }
