--- a/src/sass/_character.scss
+++ b/src/sass/_character.scss
@@ -1,4 +1,9 @@
 .character {
+  @include mediaWide {
+    font-size: 1rem;
+  }
+  font-size: 14px;
+
   background-color: $color-4;
   height: 2rem;
   padding: 0 1rem;
