--- a/src/sass/_container.scss
+++ b/src/sass/_container.scss
@@ -1,3 +1,9 @@
+.app {
+  width: 100vw;
+  height: 100%;
+  min-height: 100vh;
+}
+
 .container {
   @include mediaWide {
     min-height: 82vh;
@@ -10,6 +16,7 @@
   background-position: center top 60px;
   display: flex;
   flex-direction: column;
+  margin: auto;
 
   .character-list {
     @include mediaWide {
@@ -17,7 +24,7 @@
     }
     @include selectionColor;
     margin: 1rem auto;
-    width: 90%;
+    width: 80%;
     display: flex;
     flex-direction: column;
     color: $color-1;
